# crewai-advanced

./: .env.example  README.md  knowlege.ipynb  main.py  memory.ipynb  pyproject.toml  requirements.txt
