[project]
name = "crewai-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.201.1",
    "crewai-tools>=0.75.0",
    "docling>=2.55.1",
    "jupyter>=1.1.1",
    "langchain-google-genai>=2.1.12",
    "mem0ai>=0.1.118",
]
